fix(scrollbar): fix scrollbar style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,12 +74,65 @@
     background: transparent;
 }
 
-.v-navigation-drawer::-webkit-scrollbar {
-    width: 2px;
+/*.v-navigation-drawer::-webkit-scrollbar-thumb {*/
+/*    background-color: rgb(200, 200, 200);*/
+/*}*/
+
+.v-dialog::-webkit-scrollbar {
+    width: 4px;
 }
 
-.v-navigation-drawer::-webkit-scrollbar-thumb {
-    background-color: rgb(200, 200, 200);
+::-webkit-scrollbar {
+    height: 4px;
+    width: 6px;
+    background: transparent;
+}
+
+::-webkit-scrollbar-button:end:increment {
+    background: transparent;
+    display: none;
+}
+::-webkit-scrollbar-button:start:decrement {
+    background: transparent;
+    display: none;
+}
+::-webkit-scrollbar-track-piece:vertical {
+    background: linear-gradient(to right, rgba(0, 0, 0, .2), rgba(0, 0, 0, .3));
+}
+::-webkit-scrollbar-track-piece:horizontal {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, .2), rgba(0, 0, 0, .3));
+}
+/*::-webkit-scrollbar-track-piece:vertical:start {*/
+/*    border-radius: 3px 0 0 0;*/
+/*}*/
+/*::-webkit-scrollbar-track-piece:vertical:end  {*/
+/*    border-radius: 0 0 0 3px;*/
+/*}*/
+/*::-webkit-scrollbar-track-piece:horizontal:start {*/
+/*    border-radius: 2px 0 0 0;*/
+/*}*/
+/*::-webkit-scrollbar-track-piece:horizontal:end  {*/
+/*    border-radius: 0 2px 0 0;*/
+/*}*/
+::-webkit-scrollbar-thumb:horizontal {
+    background: rgba(255, 255, 255, .4);
+    border-radius: 2px;
+    display: block;
+    height: 24px;
+}
+::-webkit-scrollbar-thumb:vertical {
+    background: rgba(255, 255, 255, .4);
+    border-radius: 3px;
+    display: block;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, .55);
+}
+::-webkit-scrollbar-thumb:active {
+    background: rgba(255, 255, 255, .65);
+}
+.v-dialog::-webkit-scrollbar-thumb:vertical {
+    border-radius: 0 4px 4px 0;
 }
 
 /*.v-toolbar {*/
@@ -238,4 +291,7 @@
 
 .v-dialog > .theme--dark.v-card {
     background-color: #272727;
+}
+.v-tabs > .v-tabs-bar, .v-tabs-items {
+    background-color: transparent !important;
 }
